Complementado módulo de Venda

--- a/ControleVenda/Forms/VendaForm.resx
+++ b/ControleVenda/Forms/VendaForm.resx
@@ -58,6 +58,108 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="pbBack.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAgAAAAIACAYAAAD0eNT6AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAP
+        9wAAD/cBRBt/qwAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAABOgSURBVHhe7d1N
+        qK5rXQZwLbFIygyiBiJqDaJBswYNFKKgD81Bk4ogjAShSAQnQUVNyoGDIjIaFCRERU6CDCKqQd+UBEIN
+        7EvNgUioRIlpH3YtXVvXOefae78fz/u+z33fvwt+k2uw1nMP9rn+cDhnP+/Tn/40AANKviK+L34l/iD+
+        Lj4Sn4j3xZ/HO+PH4hvaz2BdtQRgn5IXxBviT+N/4q481Afj7fHy9rNZSy0B2Jfk+fE98Q/xcNRP8cn4
+        hfiq9rtYQy0B2I/kZfHX8XDEt/Cf8UPtdzK/WgKwD8mr4sPxcLi39nPxhe33M69aAnB7yd2/6/9UPBzr
+        S/n9+NL2HcyplgDcVvLm+2G+pt+LL2jfw3xqCcDtJLcY/0fe1r6J+dQSgNtIbjn+j/xA+zbmUksAri/Z
+        w/jf+Vi8pH0j86glANeV7GX8H3lr+07mUUsArifZ2/jf+Xh8dfte5lBLAK4j2eP4P/Kz7ZuZQy0BuLxk
+        z+N/5+/bdzOHWgJwWcnex/+RV7bvZ3y1BOByklHG/86b2hsYXy0BuIxkpPG/86vtHYyvlgBsLxlt/O+8
+        q72F8dUSgG0lI47/nXe39zC+WgKwnWTU8b/zgfYmxldLALaRjDz+d/yngJOqJQDnS0Yf/zt/1N7G+GoJ
+        wHmSGcb/zm+09zG+WgJwumSW8b/jLwWaVC0BOE0y0/jf+eb2TsZXSwCOl8w2/h+LF7S3Mr5aAnCcZLbx
+        v/Ob7a3MoZYAHC6ZcfzvfGt7L3OoJQCHSWYd/z9s72UetQTg6ZJZx//ON7Y3M49aAvBkyczj/+vtzcyl
+        lgA8XjLz+L8nXtTezVxqCUCXzDz+/xYvb+9mPrUE4LmSmcf/v+LV7d3MqZYAPFMy+/h/e3s386olAJ+X
+        GH+mU0sAPisx/kyplgDc7aPxZ161BFhdYvyZWi0BVpYYf6ZXS4BVJcafJdQSYEWJ8WcZtQRYTWL8WUot
+        AVaSGH+WU0uAVSTGnyXVEmAFifFnWbUEmF1i/FlaLQFmlhh/lldLgFklxh+ilgAzSow/3KslwGwS4w8P
+        1BJgJonxh2epJcAsEuMPRS0BZpAYf3iMWgKMLjH+8AS1BBhZYvzhKWoJMKrE+MMBagkwosT4w4FqCTCa
+        xPjDEWoJMJLE+MORagkwisT4wwlqCTCCxPjDiWoJsHeJ8Ycz1BJgzxLjD2eqJcBeJcYfNlBLgD1KjD9s
+        pJYAe5MYf9hQLQH2JDH+sLFaAuxFYvzhAmoJsAeJ8YcLqSXArSXGHy6olgC3lMw+/t/R3g3XVEuAW0mM
+        P1xBLQFuITH+cCW1BLi2xPjDFdUS4JoS4w9XVkuAa0mMP9xALQGuITH+cCO1BLi0xPjDDdUS4JIS4w83
+        VkuAS0mMP+xALQEuITH+sBO1BNhaYvxhR2oJsKXE+MPO1BJgK4nxhx2qJcAWEuMPO1VLgHMlxh92rJYA
+        50iMP+xcLQFOlRh/GEAtAU6RGH8YRC0BjpUYfxhILQGOkRh/GEwtAQ6VGH8YUC0BDpEYfxhULQGeJjH+
+        MLBaAjxJYvxhcLUEeJzE+MMEagnQJMYfJlFLgGdLjD9MpJYADyXGHyZTS4BHEuMPE6olwJ3E+MOkagmQ
+        GH+YWC2BtSXGHyZXS2BdifGHBdQSWFNi/GERtQTWkxh/WEgtgbUks4//d7Z3w8pqCawjMf6woFoCa0iM
+        PyyqlsD8EuMPC6slMLfE+MPiagnMKzH+QP7ElBKYU2L8gc+oJTCfxPgDn1NLYC6J8QeeoZbAPBLjDzxH
+        LYE5JMYfqGoJjC8x/sBj1RIYW2L8gSeqJTCuxPgDT1VLYEyJ8QcOUktgPInxBw5WS2AsifEHjlJLYByJ
+        8QeOVktgDInxB05SS2D/EuMPnKyWwL4lxh84Sy2B/UqMP3C2WgL7lBh/YBO1BPYnMf7AZmoJ7Eti/IFN
+        1RLYj8T4A5urJbAPifEHLqKWwO0lxh+4mFoCt5UYf+CiagncTmL8gYurJXAbifEHrqKWwPUlxh+4mloC
+        15UYf+CqaglcT2L8gaurJXAdifEHbqKWwOUlxh+4mVoCl5UYf+CmaglcTjL7+L+mvRvYl1oCl5EYf2AX
+        aglsLzH+wG7UEthWYvyBXaklsJ1k5vH/ZBh/GFAtgW0kxh/YpVoC50uMP7BbtQTOkxh/YNdqCZwuMf7A
+        7tUSOE1i/IEh1BI4XmL8gWHUEjhOYvyBodQSOFxi/IHh1BI4TGL8gSHVEni6xPgDw6ol8GSJ8QeGVkvg
+        8RLjDwyvlkCXGH9gCrUEnisx/sA0agk8U2L8ganUEvi8xPgD06kl8FmJ8QemVEvgbh+NPzCvWsLqEuMP
+        TK2WsLLE+APTqyWsKjH+wBJqCStKjD+wjFrCahLjDyyllrCSxPgDy6klrCIx/sCSagkrSIw/sKxawuwS
+        4w8srZYws8T4A8urJcwqMf4AUUuYUWL8Ae7VEmaTGH+AB2oJM0lmH//XtncDPEktYRaJ8QcoagkzSIw/
+        wGPUEkaXGH+AJ6gljCwx/gBPUUsYVWL8AQ5QSxhRYvwBDlRLGE1i/AGOUEsYSWL8AY5USxhFYvwBTlBL
+        GEFi/AFOVEvYu8T4A5yhlrBnifEHOFMtYa8S4w+wgVrCHiXGH2AjtYS9SYw/wIZqCXuSGH+AjdUS9iIx
+        /gAXUEvYg8T4A1xILeHWEuMPcEG1hFtKjD/AhdUSbiUx/gBXUEu4hcT4A1xJLeHaEuMPcEW1hGtKjD/A
+        ldUSriUx/gA3UEu4hsT4A9xILeHSEuMPcEO1hEtKjD/AjdUSLiUx/gA7UEu4hMT4A+xELWFrifEH2JFa
+        wpYS4w+wM7WErSTGH2CHaglbSIw/wE7VEs6VGH+AHaslnCOZffy/q70bYCS1hFMlxh9gALWEUyTGH2AQ
+        tYRjJcYfYCC1hGMkxh9gMLWEQyXGH2BAtYRDJMYfYFC1hKdJjD/AwGoJT5IYf4DB1RIeJzH+ABOoJTSJ
+        8QeYRC3h2RLjDzCRWsJDifEHmEwt4ZHE+ANMqJZwJzH+AJOqJSTGH2BitWRtifEHmFwtWVdi/AEWUEvW
+        lBh/gEXUkvUkxh9gIbVkLYnxB1hMLVlHYvwBFlRL1pAYf4BF1ZL5JcYfYGG1ZG6J8QdYXC2ZV2L8Acg/
+        NUvJnJIfvB/KGRl/gCPUkvkk33Q/kg9HcxbGH+BItWQuyUvjQ/FwNGdh/AFOUEvmkvzJ/VjOxvgDnKiW
+        zCN57f1Yzsb4A5yhlswheX68Jx4O5wyMP8CZaskcku+9H8yZGH+ADdSSOSTvuh/NWRh/gI3UkvElXxKf
+        iIcDOjLjD7ChWjK+5HX3wzkD4w+wsVoyvuTn78dzdHfj/7r2RgBOV0vGl/z2/YCOzPgDXEgtGV8y+v/8
+        x/gDXFAtGV/y3vshHZHxB7iwWjK+5F/ux3REd39vwde2dwGwjVoyvuQv78d0VB8MRwDAhdSS8SW/cz+k
+        I3MEAFxILRlf8sv3Izo6RwDABdSS8SWvvx/QGTgCADZWS8aXfGX8bzwc0pE5AgA2VEvmkPzF/XjO4u4I
+        +Jr2VgCOU0vmkLzlfjhn4ggA2EAtmUPyovhwPBzQGTgCAM5US+aRvOl+NGfjCAA4Qy2ZR/LCeH88HM9Z
+        OAIATlRL5pK8Oj4VD8dzFo4AgBPUkvkkb7wfzBk5AgCOVEvmlLz9fjBn5AgAOEItmVPygnhnPBzOmTgC
+        AA5US+aVOAIAyD8xS8ncEkcAwOJqyfwSRwDAwmrJGhJHAMCiask6EkcAwIJqyVoSRwDAYmrJehJHAMBC
+        asmaEkcAwCJqyboSRwDAAmrJ2hJHAMDkagmJIwBgYrWEO4kjAGBStYRHEkcAwIRqCQ8ljgCAydQSni1x
+        BABMpJbQJI4AgEnUEh4ncQQATKCW8CSJIwBgcLWEp0kcAQADqyUcInEEAAyqlnCoxBEAMKBawjESRwDA
+        YGoJx0ocAQADqSWcInEEAAyilnCqxBEAMIBawjkSRwDAztUSzpU4AgB2rJawhcQRALBTtYStJI4AgB2q
+        JWwpcQQA7EwtYWuJIwBgR2oJl5A4AgB2opZwKYkjAGAHagmXlDgCAG6slnBpiSMA4IZqCdeQOAIAbqSW
+        cC2JIwDgBmoJ15TMfgT8azgCgF2pJVxb4ggAuKJawi0kjgCAK6kl3EriCAC4glrCLSWOAIALqyXcWuII
+        ALigWsIeJI4AgAupJexFssIR8Mr2doBLqiXsSeIIANhYLWFvEkcAwIZqCXuUOAIANlJL2KvEEQCwgVrC
+        niWOAIAz1RL2LnEEAJyhljCCxBEAcKJawigSRwDACWoJI0kcAQBHqiWMJnEEAByhljCixBEAcKBawqgS
+        RwDAAWoJI0scAQBPUUsYXeIIAHiCWsIMEkcAwGPUEmaROAIAilrCTBJHAMCz1BJmkzgCAB6oJcwocQQA
+        3KslzCpxBABELWFmiSMAWF4tYXaJIwBYWi1hBYkjAFhWLWEViSMAWFItYSWJIwBYTi1hNYkjAFhKLWFF
+        iSMAWEYtYVWJIwBYQi1hZYkjAJheLWF1iSMAmFotgbuNdAQA86ol8FmJIwCYUi2Bz0scAcB0agk8U+II
+        AKZSS+C5EkcAMI1aAl3iCACmUEvg8RJHADC8WgJPljgCgKHVEni6xBEADKuWwGESRwAwpFoCh0scAcBw
+        agkcJ3EEAEOpJXC8xBEADKOWwGkSRwAwhFoCp0scAcDu1RI4T+IIAHatlsD5EkcAsFu1BLaROAKAXaol
+        sJ3EEQDsTi2BbSWOAGBXaglsL5n9CPhAOAJgELUELiNxBAC7UEvgchJHAHBztQQuK1nhCHhFezuwD7UE
+        Li9xBAA3U0vgOhJHAHATtQSuJ3EEAFdXS+C6EkcAcFW1BK4vcQQAV1NL4DYSRwBwFbUEbidxBAAXV0vg
+        thJHAHBRtQRuL3EEABdTS2AfEkcAcBG1BPYjcQQAm6slsC+JIwDYVC2B/UkcAcBmagnsU+IIADZRS2C/
+        EkcAcLZaAvuWOAKAs9QS2L/EEQCcrJbAGBJHAHCSWgLjSBwBwNFqCYwlcQQAR6klMJ7EEQAcrJbAmBJH
+        AHCQWgLjShwBwFPVEhhb4ggAnqiWwPgSRwDwWLUE5pA4AoCqlsA8EkcA8By1BOaSOAKAZ6glMJ/EEQB8
+        Ti2BOSWOAOAzagnMK3EEAPnTUkpgbokjABZXS2B+iSMAFlZLYA2JIwAWVUtgHYkjABZUS2AtiSMAFlNL
+        YD2JIwAWUktgTYkjABZRS2BdiSMAFlBLYG2JIwAmV0uAxBEAE6slwJ3EEQCTqiXAI4kjACZUS4CHEkcA
+        TKaWAM+WOAJgIrUEaBJHAEyilgCPkzgCYAK1BHiSxBEAg6slwNMkjgAYWC0BDpE4AmBQtQQ4VOIIgAHV
+        EuAYiSMABlNLgGMljgAYSC0BTpHMfgS8P17e3g6jqSXAqRJHAAyglgDnSBwBsHO1BDhX4giAHaslwBYS
+        RwDsVC0BtpI4AmCHagmwpcQRADtTS4CtJY4A2JFaAlxC4giAnaglwKUkjgDYgVoCXFLiCIAbqyXApSWO
+        ALihWgJcQ+IIgBupJcC1JI4AuIFaAlxT4giAK6slwLUljgC4oloC3ELiCIArqSXArSSOALiCWgLcUuII
+        gAurJcCtJY4AuKBaAuxB4giAC6klwF4kjgC4gFoC7EniCICN1RJgbxJHAGyolgB7lDgCYCO1BNirxBEA
+        G6glwJ4ljgA4Uy0B9i5xBMAZagkwgsQRACeqJcAoEkcAnKCWACNJHAFwpFoCjCZxBMARagkwosQRAAeq
+        JcCoEkcAHKCWACNLHAHwFLUEGF3iCIAnqCXADBJHADxGLQFmkTgCoKglwEwSRwA8Sy0BZpM4AuCBWgLM
+        KHEEwL1aAswqcQRA1BJgZokjgOXVEmB2iSOApdUSYAWJI4Bl1RJgFYkjgCXVEmAliSOA5dQSYDWJI4Cl
+        1BJgRYkjgGXUEmBViSOAJdQSYGWJI4Dp1RJgdYkjgKnVEoC7jXQEMK9aAvBZiSOAKdUSgM9LHAFMp5YA
+        PFOywhHw0vZ25lRLAJ4rmf0I+Jv44vZ25lNLALpk9iPgHe3dzKeWADxeMvsR8CPt3cyllgA8WTLzEfDR
+        eHF7N/OoJQBPl8x8BPx0ezPzqCUAh0lmPQL+PV7S3swcagnA4ZJZj4Afbu9lDrUE4DjJjEfA77a3Moda
+        AnC8ZLYj4OPxRe2tjK+WAJwmme0I+Jb2TsZXSwBOl8x0BLyhvZHx1RKA8ySzHAE/0d7H+GoJwPmSGY6A
+        X2xvY3y1BGAbyehHgL8bYFK1BGA7ychHwNvamxhfLQHYVjLqEfCW9h7GV0sAtpeMeAR8f3sL46slAJeR
+        jHYEfF17B+OrJQCXk4xyBLyvfT9zqCUAl5WMcAT8Uvt25lBLAC4v2fsR8G3tu5lDLQG4jmSvR8C72/cy
+        j1oCcD3JHo+A17RvZR61BOC6kj0dAX/VvpG51BKA60v2cAT8R3x9+z7mUksAbiO55RHwf/Hd7buYTy0B
+        uJ3kVkfAz7TvYU61BOC2krsj4B33w3wNb43nt29hTrUEYB+SN8V/x8Ox3tIn4/XtdzO3WgKwH8mr4kPx
+        cLi38M/x6vY7mV8tAdiX5MviJ+Nj8XDET/GReHO8sP0u1lBLAPYpeXH8VPxjPBz1Q/xt/Hh8efvZrKWW
+        AOxf8op4Y/xW/Fm8Nz4an4h/ij+OX4sfjZe1n8GqPv28/wfhb26liW6rGwAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <metadata name="Id.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Nome.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Quantia.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Preco.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
   <data name="btnAtualizar.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAgAAAAIACAYAAAD0eNT6AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
@@ -319,24 +421,24 @@
         usSCOTGh7yU7y1aytswRHq8DGu//ev8fa7Q5koSIWVUAAAAASUVORK5CYII=
 </value>
   </data>
-  <data name="pictureBox5.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnSalvar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
-        qAAAAKgBefSzxgAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAMkSURBVEhLrZXN
-        TxNBGMZRExMTTAiHFkQoxYMf6F9g4smDtLRUyh68QQstlO4uS7HSLZhGJUDQ+EEAPRhjSNTgQTyIRAlK
-        DImGQkIBjVKXFogGMEBbEPnqOLNM67IspEGe5HfYd995nr4zu9u47SQje3Jllq5AEtW7kmwf+iCvGDyN
-        b/2/Mi3v4mUlb1Zl5tdATveCZLsHMujLdI0cxC27l6zk7R9kHOFfAOaKZwS3xiZFg0+ZVusdS635HE69
-        Phw13jYAomwOIQLK5mBr+u25BGwlrbQ6aA6NI8jMnbEGYIKt2EpakV8eQU527xiQcvWrKCA0j62kJTTn
-        uTYMjlT2gSOXP/KkVA+DozV+ntS6SaBsDIgDALaS1pYAEYpbE1sMxWAraUmZCtnTgFHOv8JxHBAyOzsL
-        xFpaCY9C43F4wI8zWhbqsZW0hAGVL7ng80/+OSFP3dPebt/q+wjuH2vtawCo4gDYhy12ljBACuEWZTSH
-        uo8/nDmM1hEWV7yedurzKIedoJ1Wwlp9hjcUS2jWMTA+7/FOLG7C/2ty5ne4fywQ7jiLzfWk81Iexc5A
-        gIh2gnEl8sYRxRowtwxyUL+mqPxejrkcGzrdebTjLuQJvA6hGkGy/QTDHOLNkYQBUuAtmoprAwe0NCtX
-        FVjXs/ItQGe2PYLLo+dAWKuUeood2wh22HF5c0DFCy74oMc3L+R+75S30b3cgHq1JuYmMlcZyUV4uR/V
-        hIIT5fABtMODS5sDdnhMa1FvdhHdiQI0hdQAv1gkXZkrYWMCdgmXYtuijJbQHdQLJ2hDAdlGyscvFklv
-        dZzAAdO4BANEHzsx/Bm0hLpQr66kTMdvUb4lrDXazvEGAhG04xkOaMMl+LlG/wUSxhHwIS+nNy0koX61
-        kfzJhxisqxoTXZtbalNojcwFrYkewU9XWE9WnefNkZQ3OIWi/ju33STRF60p1Ij6dSbymNpgXUQhYlQG
-        EqAQgmKHLha7ZHzAbkQYmURNIf0KTrGkyi9F06xnG8lxTTHDoJrWzKBJvuSWscl4yd5JXWg/GQ2h2T5c
-        3ltlFdhOqQ3kgtZs+/YXM3ljxgTS2PYAAAAASUVORK5CYII=
+        qAAAAKgBefSzxgAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAMjSURBVEhLpZXr
+        S1NhHMcHhUhU9MZ5y81FvsnoD6g3o+F0c27LGL2poAgswbIyUxCLyjKsJMyljTnTNznNTYpUEi8YZIWX
+        TR2o82zzUqhMd7GW8/LrPKdz8nh2tpZ94fNqz/P9POd3LuMECzenJ5Ob3eGOye1bic0f7o3OMx0mf/r/
+        JGd37Y662L7GzWoFXACx+WYckz359mgEuWT74V56/xMVU2wKSG6aR8ml4YVfZhfwHlhtCSWWjYS7I3+K
+        gwpwBGovwi1Qe+oTy5f2kVXs4ZXi5XgxBTerLVwBiaeerGIPdXKK6JzOkIL44jGGwOsiq9hDLye4MwJx
+        BV8g7kYfQXyxBfaXOAgSSmdAUOFmCoCsYk+AgAH/ybeAQiZkFXvYSumEEHgE6uW3gkrvU7KKPfSyCczh
+        xzAM6Hg8HmDENjQPpxJ1EElWhA5dUNCCeRo/OZbo6E1OS6d9tRsxtrheiQv2on0qvSpCXCe9nPJS0iht
+        kN9PNyhPS/WqGKKUHrqADWpEByq9zRw97EB7xLXp5SJN6urxKjEgcAHIDErEOk6dRK+KIspR6GXvBqZc
+        Zuv0dzqWWZfN4d5oP6Zd2IPWp+gk3VQxi4ACk77O5IctmFteO4PWopMzyy/os6DisxoyjCeYkgFhl3Bn
+        GCP6uhJXDbvQzOljoRicGASfzwfXe/KZApAZFee2CPIMmKe6x+6iU9Y9306cHr+hzHKE2WomBIW9RYEC
+        g7Jji4DtMXU6nR2/xyNtokrRWPrHB2DIagL7lJ0QTCxZYXB+CBrGGumChb+PqGyqFQnwm9tGCdS9VVsO
+        gQRUnL7FTYFR4Qv42DHhP5r+SAhqpc8pgag6Fa4Yr0H+m0IYsY0SAu2wDoo+3IKzrefpVzDOIf4LWIop
+        eI9nZ5BApJEfoQR0Qt4Do+IZR3AP4/MfTmLBrgS9aLwq7yHiKmokk0xBc78B5lxzzJNDhkHplzWdTEL7
+        wo5MJ0sSacR+poTlRQP805FLbvu3iGsUR0WatB/BBOjkGUbFVXL59iLUCSPFdenaFG2aU/QibV3ySu7H
+        y8fRzOUt8oPkMjwczi9yMwjKUVtTYgAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
