--- a/ControleVenda/Forms/VendaForm.resx
+++ b/ControleVenda/Forms/VendaForm.resx
@@ -148,6 +148,9 @@
         AOxf8op4Y/xW/Fm8Nz4an4h/ij+OX4sfjZe1n8GqPv28/wfhb26liW6rGwAAAABJRU5ErkJggg==
 </value>
   </data>
+  <metadata name="toolTip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
   <metadata name="Id.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
@@ -160,6 +163,46 @@
   <metadata name="Preco.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <data name="btnAdicionarCliente.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
+        qAAAAKgBefSzxgAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAMjSURBVEhLpZXr
+        S1NhHMcHhUhU9MZ5y81FvsnoD6g3o+F0c27LGL2poAgswbIyUxCLyjKsJMyljTnTNznNTYpUEi8YZIWX
+        TR2o82zzUqhMd7GW8/LrPKdz8nh2tpZ94fNqz/P9POd3LuMECzenJ5Ob3eGOye1bic0f7o3OMx0mf/r/
+        JGd37Y662L7GzWoFXACx+WYckz359mgEuWT74V56/xMVU2wKSG6aR8ml4YVfZhfwHlhtCSWWjYS7I3+K
+        gwpwBGovwi1Qe+oTy5f2kVXs4ZXi5XgxBTerLVwBiaeerGIPdXKK6JzOkIL44jGGwOsiq9hDLye4MwJx
+        BV8g7kYfQXyxBfaXOAgSSmdAUOFmCoCsYk+AgAH/ybeAQiZkFXvYSumEEHgE6uW3gkrvU7KKPfSyCczh
+        xzAM6Hg8HmDENjQPpxJ1EElWhA5dUNCCeRo/OZbo6E1OS6d9tRsxtrheiQv2on0qvSpCXCe9nPJS0iht
+        kN9PNyhPS/WqGKKUHrqADWpEByq9zRw97EB7xLXp5SJN6urxKjEgcAHIDErEOk6dRK+KIspR6GXvBqZc
+        Zuv0dzqWWZfN4d5oP6Zd2IPWp+gk3VQxi4ACk77O5IctmFteO4PWopMzyy/os6DisxoyjCeYkgFhl3Bn
+        GCP6uhJXDbvQzOljoRicGASfzwfXe/KZApAZFee2CPIMmKe6x+6iU9Y9306cHr+hzHKE2WomBIW9RYEC
+        g7Jji4DtMXU6nR2/xyNtokrRWPrHB2DIagL7lJ0QTCxZYXB+CBrGGumChb+PqGyqFQnwm9tGCdS9VVsO
+        gQRUnL7FTYFR4Qv42DHhP5r+SAhqpc8pgag6Fa4Yr0H+m0IYsY0SAu2wDoo+3IKzrefpVzDOIf4LWIop
+        eI9nZ5BApJEfoQR0Qt4Do+IZR3AP4/MfTmLBrgS9aLwq7yHiKmokk0xBc78B5lxzzJNDhkHplzWdTEL7
+        wo5MJ0sSacR+poTlRQP805FLbvu3iGsUR0WatB/BBOjkGUbFVXL59iLUCSPFdenaFG2aU/QibV3ySu7H
+        y8fRzOUt8oPkMjwczi9yMwjKUVtTYgAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="btnRetirarCliente.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
+        qAAAAKgBefSzxgAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAMoSURBVEhLpZVb
+        SFNxHMcHhUgY9NK8pXOQLxm5WVObt83Lg09RMIKQInowJS1DzZckKi+lJpKaEhHkQ5BCCFFWYooJRiLO
+        5n2ebW4iM5u7HJ1O56/zP/yP/nc8XrIvfJ7O///9/PfbuYh2ijiv55I4t9MRlN/nCS7+1RtYqD2NL/1/
+        onK/BYhzvqyJsz9B4O0+CC4eZtAaox6M+OElB4845+sKKubYEmDuDY/gpfuLpMooDa/QG8LKRjfCHuk2
+        i3cUMEgbXQiHtNHZElG7eAxXCSe8kilnijnE2R37FWCcLbhKONzJOQLzunYVhJZO8AQuO64SDlnO8lAH
+        ISU/IaSonyX0vg5OlJlYwiotIH3u4AsAVwlnm4CHpMa8rZAPrhKOUCnJLgKntJH+IG1w1eEq4ZBlU5TJ
+        Q1EUkNhsNuDFMDQPlyNegz+u2D2koKSdcrb+MC2SvB2Y13cZ17oRUzZvPSM4ivaNaDR+ppSz+aYUeatN
+        rSin0xRZtEoRxJaSIQVCECNqE72DQ2iPITmmdixBtqZTRgNiQX0O6LRYhJdOj33jypQfZ8tRyLKPgzP2
+        Yb15yQfTgsVgX/8c1TAfgNZTSfJurlhAwEG5U5WSfQus9HoWWotOzi+fuqoB+7MKoNPj+ZJBUKkO7zmi
+        iJoZT0gzHEEzJ8fCYR4cALfbDct5N/gCoFPjrvsICt9TzuYeo52kqmuuF50e/aH8clagHWIF7rs3BQSx
+        nT4CodvUarX2I4ExWd62WZwkB332NZguyAHz6CgrWG2qA3fRLVjSZJKS33uOSPKU+o4EhiR5BycwVpdv
+        HsBisbACLhvWOVLg3vay4yOpMmix4AUnmLpyEUwGYYGnvZUUTIrYb4FAMYek2mRFAnNczBldAh4Rw/iF
+        DDCPj20JvF5YfVlPlsNSmqJeJH1MSSRPpqmdfgl60MKbXKeQRJ8om+YEiDF1PMz29YKbpmGlvNSnnMHj
+        yIiLRPv2HXOyLHI8QeYhJQiBBw3donfwtn/LbLJCOZEgW95F4GFeFwV4+cFiUKn8ZxJjXk0myv+MKaO9
+        C2qFhymeRDN3qM6fxMuYiER/AbHvH6XPRuDbAAAAAElFTkSuQmCC
+</value>
+  </data>
   <data name="btnSalvar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
@@ -180,9 +223,6 @@
         y8fRzOUt8oPkMjwczi9yMwjKUVtTYgAAAABJRU5ErkJggg==
 </value>
   </data>
-  <metadata name="toolTip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 17</value>
-  </metadata>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAEAAAAAAAEAIAD3LgAAFgAAAIlQTkcNChoKAAAADUlIRFIAAAEAAAABAAgGAAAAXHKoZgAAAAFv
