--- a/ControleVenda/Forms/ConfiguracaoForm.resx
+++ b/ControleVenda/Forms/ConfiguracaoForm.resx
@@ -151,6 +151,9 @@
         AOxf8op4Y/xW/Fm8Nz4an4h/ij+OX4sfjZe1n8GqPv28/wfhb26liW6rGwAAAABJRU5ErkJggg==
 </value>
   </data>
+  <metadata name="toolTip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
   <data name="btnSalvar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
